--- a/Predictions from Dataset for Misbehaviors in VANETs.ipynb
+++ b/Predictions from Dataset for Misbehaviors in VANETs.ipynb
@@ -2612,7 +2612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "ae54c005",
    "metadata": {},
    "outputs": [
@@ -2903,7 +2903,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00315534",
+   "id": "b3ea051d",
    "metadata": {},
    "source": [
     "Although the recall value has increased, both accuracy and precision values decrease. Therefore, this attempt is unsuccessful."
@@ -3038,7 +3038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "46711be7",
    "metadata": {},
    "outputs": [
@@ -3046,7 +3046,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8348493337631971\n"
+      "Accuracy: 0.8348493337631971\n",
+      "Improved KNN Accuracy (cross-validated over 3 folds): 0.8008662805401764\n",
+      "Improved KNN Precision (cross-validated over 3 folds): 0.8938267841490103\n",
+      "Improved KNN Recall (cross-validated over 3 folds): 0.5769897911485171\n",
+      "Improved KNN F1-score (cross-validated over 3 folds): 0.7012792743227657\n"
      ]
     }
    ],
@@ -3102,7 +3106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "d634db0a",
    "metadata": {},
    "outputs": [
@@ -4167,7 +4171,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e6966a3d",
+   "id": "a8be1fca",
    "metadata": {},
    "outputs": [
     {
@@ -4230,11 +4234,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f39c5505",
+   "execution_count": 10,
+   "id": "b32130fd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Sample Index: 3148706\n",
+      "Random Sample Features: [[ 8.85557912e+02  5.08228950e+02 -9.20804392e+00  6.64272746e+00\n",
+      "   2.08881552e-02 -1.62649377e-02  2.48356376e+00 -1.79115188e+00\n",
+      "  -8.07119156e-01  5.90388574e-01  1.12149809e+01  2.29830828e+00]]\n",
+      "Prediction: 1\n",
+      "Probability Estimates:\n",
+      "[[0.15 0.85]]\n",
+      "\n",
+      "Calculation time: 0.292513 seconds\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\david\\anaconda3\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Section 5.1 Random Forest Prediction \n",
+    "import random\n",
+    "import time\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "random_index = random.randint(0, len(df) - 1)\n",
+    "random_sample = df.loc[random_index, features].values.reshape(1, -1)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train)\n",
+    "random_sample_scaled = scaler.transform(random_sample)\n",
+    "random_prediction = rf.predict(random_sample_scaled)\n",
+    "\n",
+    "print(\"Random Sample Index:\", random_index)\n",
+    "print(\"Random Sample Features:\", random_sample)\n",
+    "print(\"Prediction:\", random_prediction[0])\n",
+    "\n",
+    "random_probabilities = rf.predict_proba(random_sample_scaled)\n",
+    "\n",
+    "print(\"Probability Estimates:\")\n",
+    "print(random_probabilities)\n",
+    "\n",
+    "end_time = time.time()\n",
+    "elapsed_time = end_time - start_time\n",
+    "print(f\"\\nCalculation time: {elapsed_time:.6f} seconds\")"
+   ]
   },
   {
    "cell_type": "markdown",
