--- a/Movies/Movie Data Analysis.ipynb
+++ b/Movies/Movie Data Analysis.ipynb
@@ -45,7 +45,7 @@
     "## Table of Contents\n",
     "* [Section 1: Dataset sources](#bullet1)\n",
     "* [Section 2: Early-stage data observations](#bullet2)\n",
-    "* [Section 3: Data Analysis (Part 1)](#bullet3)\n",
+    "* [Section 3: Data Analysis Part 1 - Data Cleaning](#bullet3)\n",
     "* [Section 4: Data Analysis (Part 2)](#bullet4)\n",
     "* [Section 5: Data Analysis (Part 3)](#bullet5)\n",
     "* [Section 6: Data Analysis (Part 4)](#bullet6)\n",
@@ -71,7 +71,12 @@
     "<br>\n",
     "<b>Download Link</b>: <a href=\"https://www.kaggle.com/datasets/tmdb/tmdb-movie-metadata\">TMDB 5000 Movie Dataset</a>\n",
     "\n",
-    "After downloading the compressed folder, unzip it. The expected situation indicates two datasets: <b>tmdb_5000_credits.csv</b> and <b>tmdb_5000_movies.csv</b> Each dataset contains different information.\n",
+    "After downloading the compressed folder, unzip it. The expected situation indicates two different datasets: \n",
+    "\n",
+    "<ul>\n",
+    "  <li><b>tmdb_5000_credits.csv</b></li>\n",
+    "  <li><b>tmdb_5000_movies.csv</b></li>\n",
+    "</ul>  \n",
     "\n",
     "Putting these two data files in the same folder with this notebook."
    ]
@@ -300,7 +305,7 @@
    "id": "9e9dc553",
    "metadata": {},
    "source": [
-    "### <a class=\"anchor\" id=\"bullet3\"><b>Section 3</b>: Data Analysis (Part 1)</a>"
+    "### <a class=\"anchor\" id=\"bullet3\"><b>Section 3</b>: Data Analysis Part 1 - Data Cleaning</a>"
    ]
   },
   {
@@ -568,8 +573,16 @@
    "id": "2860b122",
    "metadata": {},
    "source": [
-    "By observation, there is no duplication between these identifer values."
+    "By observation, there is no duplication between these identifer values. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c80b9000",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
